--- a/ReadExcelUsingSylvan.csproj
+++ b/ReadExcelUsingSylvan.csproj
@@ -8,7 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Sylvan.Data" Version="0.2.3" />
     <PackageReference Include="Sylvan.Data.Excel" Version="0.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <!--<ProjectReference Include="..\..\Sylvan.Data.Excel\source\Sylvan.Data.Excel\Sylvan.Data.Excel.csproj" />
+    <ProjectReference Include="..\..\Sylvan\source\Sylvan.Data\Sylvan.Data.csproj" />-->
   </ItemGroup>
 
 </Project>
